--- a/Clash config.ini
+++ b/Clash config.ini
@@ -11,7 +11,7 @@ ruleset=全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
 #
-custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=China`select`[]Proxy`[]手动切换`[]DIRECT
 custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
