--- a/Clash config.ini
+++ b/Clash config.ini
@@ -14,9 +14,9 @@ ruleset=Final,[]FINAL
 custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=China`select`[]Proxy`[]手动切换`[]DIRECT
-custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=OneDrive`select`[]DIRECT`[]Proxy`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]手动切换
-custom_proxy_group=Netflix`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Netflix`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=全球直连`select`[]DIRECT`[]Proxy
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
