--- a/Clash config.ini
+++ b/Clash config.ini
@@ -17,9 +17,9 @@ custom_proxy_group=China`select`[]Proxy`[]手动切换`[]DIRECT
 custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=Netflix`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
-custom_proxy_group=全球直连`select`[]DIRECT`[]Proxy
+custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
-custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]🇭🇰 香港节点`[]台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
