--- a/Clash config.ini
+++ b/Clash config.ini
@@ -11,18 +11,18 @@ ruleset=全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
 #
-custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]tw 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=China`select`[]DIRECT
-custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]tw 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+custom_proxy_group=Google`select`[]Proxy`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
-custom_proxy_group=Netflix`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]tw 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+custom_proxy_group=Netflix`select`[]Proxy`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=tw 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
