--- a/Clash config.ini
+++ b/Clash config.ini
@@ -21,7 +21,7 @@ custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|1|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TW 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
