--- a/Clash config.ini
+++ b/Clash config.ini
@@ -22,11 +22,11 @@ custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
 custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|1|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=TW 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW 台湾节点`url-test`(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡节点`url-test`(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(韩|KR|(?i)direct|Kor))^((?!(港|台|日|实验|美|日用|新)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 #
 
