--- a/Clash config.ini
+++ b/Clash config.ini
@@ -10,7 +10,7 @@ ruleset=Final,[]FINAL
 #
 custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
-custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
+custom_proxy_group=OneDrive`select`.*
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
