--- a/Clash config.ini
+++ b/Clash config.ini
@@ -2,6 +2,7 @@
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 
 ruleset=全球直连,[]GEOIP,LAN
 ruleset=全球直连,[]GEOIP,CN
@@ -11,6 +12,7 @@ ruleset=Final,[]FINAL
 custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=OneDrive`select`.*
+custom_proxy_group=Netflix`select`.*
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
