--- a/Clash config.ini
+++ b/Clash config.ini
@@ -3,6 +3,7 @@ ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mas
 ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 
 
 ruleset=全球直连,[]GEOIP,LAN
@@ -14,6 +15,7 @@ custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=OneDrive`select`.*
 custom_proxy_group=Netflix`select`.*
+custom_proxy_group=YouTube`select`.*
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
