--- a/Clash config.ini
+++ b/Clash config.ini
@@ -27,7 +27,7 @@ custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日|JP|(?i)Japan))^((?!(
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|0.2|台|日|韩|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|US|(?i)States|American))^((?!(港|0.2|台|日|韩|新|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(韩|KR|(?i)direct|Kor))^((?!(港|台|0.2|日|实验|美|日用|新)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=低倍率节点`static`(?=.*(低倍|0.2))
+custom_proxy_group=低倍率节点`static`(?=.*(低倍|0.2)),,50
 
 #
 
