--- a/Clash config.ini
+++ b/Clash config.ini
@@ -4,6 +4,7 @@ ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=China,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/master/Rulesets/Surge/Basic/CN.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=Download,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Download.list
 
 
 ruleset=全球直连,[]GEOIP,LAN
@@ -13,6 +14,7 @@ ruleset=Final,[]FINAL
 #
 custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
+custom_proxy_group=Download`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=OneDrive`select`.*
 custom_proxy_group=Netflix`select`.*
 custom_proxy_group=YouTube`select`.*
