--- a/Clash config.ini
+++ b/Clash config.ini
@@ -4,6 +4,7 @@ ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=China,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/master/Rulesets/Surge/Basic/CN.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=Download,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Download.list
+ruleset=Download,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
 
 
 ruleset=全球直连,[]GEOIP,LAN
@@ -16,6 +17,7 @@ custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=Download`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=OneDrive`select`.*
 custom_proxy_group=Netflix`select`.*
+custom_proxy_group=OpenAI`select`.*
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
