--- a/Clash config.ini
+++ b/Clash config.ini
@@ -15,7 +15,7 @@ ruleset=Final,[]FINAL
 custom_proxy_group=Proxy`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Apple`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=Download`select`[]Proxy`[]DIRECT`[]手动切换
-custom_proxy_group=OneDrive`select`[]DIRECT`[]手动切换
+custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=Netflix`select`.*
 custom_proxy_group=OpenAI`select`.*
 custom_proxy_group=China`select`[]DIRECT
