--- a/Clash config.ini
+++ b/Clash config.ini
@@ -6,6 +6,7 @@ ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/R
 ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=PikPak,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
+ruleset=Cloudflare,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.list
 
 
 ruleset=全球直连,[]GEOIP,LAN
@@ -20,6 +21,7 @@ custom_proxy_group=Netflix`select`.*
 custom_proxy_group=HBO`select`.*
 custom_proxy_group=OpenAI`select`.*
 custom_proxy_group=PikPak`select`[]Proxy`[]DIRECT`[]手动切换
+custom_proxy_group=Cloudflare`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
