--- a/Clash config.ini
+++ b/Clash config.ini
@@ -27,11 +27,11 @@ custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
-custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204
-custom_proxy_group=TW 台湾节点`url-test`(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204
-custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|0.2|日用|实验)).)*$`http://www.gstatic.com/generate_204
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|0.2|台|日|韩|美|日用|实验)).)*$`http://www.gstatic.com/generate_204
-custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|US|(?i)States|American))^((?!(港|0.2|台|日|韩|新|日用|实验)).)*$`http://www.gstatic.com/generate_204
+custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204,,50
+custom_proxy_group=TW 台湾节点`url-test`(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|0.2|日用|实验)).)*$`http://www.gstatic.com/generate_204,,50
+custom_proxy_group=🇸🇬 新加坡节点`url-test`(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|0.2|台|日|韩|美|日用|实验)).)*$`http://www.gstatic.com/generate_204,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|US|(?i)States|American))^((?!(港|0.2|台|日|韩|新|日用|实验)).)*$`http://www.gstatic.com/generate_204,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(韩|KR|(?i)direct|Kor))^((?!(港|台|0.2|日|实验|美|日用|新)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 #
