--- a/Clash config.ini
+++ b/Clash config.ini
@@ -7,6 +7,7 @@ ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/maste
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=PikPak,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
 ruleset=Cloudflare,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.list
+ruleset=TeraBox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TeraBox/TeraBox.list
 
 
 ruleset=全球直连,[]GEOIP,LAN
@@ -22,6 +23,7 @@ custom_proxy_group=HBO`select`.*
 custom_proxy_group=OpenAI`select`.*
 custom_proxy_group=PikPak`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=Cloudflare`select`[]Proxy`[]DIRECT`[]手动切换
+custom_proxy_group=TeraBox`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=China`select`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
