--- a/Clash config.ini
+++ b/Clash config.ini
@@ -27,6 +27,7 @@ custom_proxy_group=全球直连`select`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT`[]手动切换
 
+custom_proxy_group=港台日`url-test`(?=.*(港|HK|(?i)Hong|台|TW|(?i)Taiwan|日|JP|(?i)Japan))^((?!(0.2|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TW 台湾节点`url-test`(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|0.2|美|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|0.2|日用|实验)).)*$`http://www.gstatic.com/generate_204`300,,50
