--- a/Clash config.ini
+++ b/Clash config.ini
@@ -14,7 +14,7 @@ ruleset=全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
 #
-custom_proxy_group=Proxy`select`[]港台日`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+custom_proxy_group=Proxy`select`[]港台新`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
 custom_proxy_group=GoogleSearch`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Netflix`select`.*
