--- a/Clash config.ini
+++ b/Clash config.ini
@@ -1,6 +1,6 @@
 #
 ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OneDrive.list
-ruleset=GoogleSearch,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
+#ruleset=GoogleSearch,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
 ruleset=China,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/master/Rulesets/Surge/Basic/CN.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
@@ -15,7 +15,7 @@ ruleset=Final,[]FINAL
 #
 custom_proxy_group=Proxy`select`[]港台新`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
-custom_proxy_group=GoogleSearch`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
+#custom_proxy_group=GoogleSearch`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 custom_proxy_group=Netflix`select`.*
 custom_proxy_group=HBO`select`.*
 custom_proxy_group=OpenAI`select`.*
