--- a/Clash config.ini
+++ b/Clash config.ini
@@ -7,7 +7,7 @@ ruleset=China,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/master/
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=PikPak,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
 ruleset=TeraBox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TeraBox/TeraBox.list
-ruleset=Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
+ruleset=Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 
 ruleset=全球直连,[]GEOIP,LAN
 ruleset=全球直连,[]GEOIP,CN
