--- a/Clash config.ini
+++ b/Clash config.ini
@@ -7,7 +7,7 @@ ruleset=China,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/master/
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=PikPak,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
 ruleset=TeraBox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TeraBox/TeraBox.list
-ruleset=Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+#ruleset=Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 
 ruleset=全球直连,[]GEOIP,LAN
 ruleset=全球直连,[]GEOIP,CN
@@ -15,7 +15,7 @@ ruleset=Final,[]FINAL
 
 #
 custom_proxy_group=Proxy`select`[]港台新`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
-custom_proxy_group=Steam`select`[]Proxy`[]REJECT
+#custom_proxy_group=Steam`select`[]Proxy`[]REJECT
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
 #custom_proxy_group=Spotify`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 #custom_proxy_group=Netflix`select`.*
