--- a/Clash config.ini
+++ b/Clash config.ini
@@ -8,6 +8,7 @@ ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 ruleset=PikPak,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
 ruleset=TeraBox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TeraBox/TeraBox.list
 #ruleset=Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset=Crypto,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Crypto/Crypto.list
 
 ruleset=全球直连,[]GEOIP,LAN
 ruleset=全球直连,[]GEOIP,CN
@@ -17,6 +18,7 @@ ruleset=Final,[]FINAL
 custom_proxy_group=Proxy`select`[]港台新`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 #custom_proxy_group=Steam`select`[]Proxy`[]REJECT
 custom_proxy_group=OneDrive`select`[]Proxy`[]DIRECT`[]手动切换
+custom_proxy_group=Crypto`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 #custom_proxy_group=Spotify`select`[]🇭🇰 香港节点`[]TW 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]手动切换
 #custom_proxy_group=Netflix`select`.*
 #custom_proxy_group=HBO`select`.*
