--- a/1.ini
+++ b/1.ini
@@ -54,7 +54,7 @@ tun:
   auto-detect-interface: true
 
 dns:
-  enable: false
+  enable: true
   ipv6: true
   respect-rules: true
   enhanced-mode: fake-ip
