--- a/1.ini
+++ b/1.ini
@@ -44,7 +44,7 @@ sniffer:
     - "+.push.apple.com"
 
 tun:
-  enable: true
+  enable: false
   stack: mixed
   dns-hijack:
     - "any:53"
@@ -54,7 +54,7 @@ tun:
   auto-detect-interface: true
 
 dns:
-  enable: true
+  enable: false
   ipv6: true
   respect-rules: true
   enhanced-mode: fake-ip
@@ -146,7 +146,6 @@ rules:
   - RULE-SET,cn_domain,国内
   - RULE-SET,geolocation-!cn,其他
 
-  - RULE-SET,google_ip,Google
   - RULE-SET,netflix_ip,NETFLIX
   - RULE-SET,cn_ip,国内
   - MATCH,其他
