--- a/1.yaml
+++ b/1.yaml
@@ -109,10 +109,6 @@ proxy-groups:
     type: select
     proxies: [默认,香港,台湾,日本,新加坡,美国,全部节点]
 
-- name: GooglePlay
-    type: select
-    proxies: [默认,香港,台湾,日本,新加坡,美国,全部节点]
-    
   - name: Personal_Proxy
     type: select
     proxies: [默认]
@@ -183,7 +179,6 @@ rules:
   - RULE-SET,openai_domain,OpenAI
   - RULE-SET,onedrive_domain,OneDrive
   - RULE-SET,pikpak_domain,PikPak
-  - RULE-SET,googleplay_domain,GooglePlay
   - RULE-SET,terabox_domain,TeraBox
   - RULE-SET,personal_proxy_domain,Personal_Proxy
   - RULE-SET,personal_direct_domain,Personal_Direct
@@ -215,35 +210,4 @@ rule-providers:
     url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/category-cryptocurrency.mrs"
   openai_domain:
     <<: *domain
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/openai.mrs"
-  terabox_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TeraBox/TeraBox.list"
-  onedrive_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/onedrive.mrs"
-  pikpak_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/pikpak.mrs"
-  googleplay_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/google-play.mrs"
-  personal_proxy_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/phenixhub/Clash-for-Windows-Rulesets/refs/heads/main/personal_proxy.list"
-  personal_direct_domain:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/phenixhub/Clash-for-Windows-Rulesets/refs/heads/main/personal_direct.list"
-  geolocation-!cn:
-    <<: *domain
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.mrs"
-
-  private_ip:
-    <<: *ip
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/private.mrs"
-  cn_ip:
-    <<: *ip
-    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/cn.mrs"
-  #netflix_ip:
-   # <<: *ip
-   # url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"
+    url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/openai.mr
