--- a/temp.ini
+++ b/temp.ini
@@ -1,3 +1,10 @@
+proxy-providers:
+  provider1:
+    url: ""
+    type: http
+    interval: 86400
+    health-check: {enable: true,url: "https://www.gstatic.com/generate_204",interval: 300}
+
 proxies: 
   - name: "直连"
     type: direct
